--- a/package.json
+++ b/package.json
@@ -1,12 +1,17 @@
 {
   "name": "@0no-co/graphql.web",
   "description": "A spec-compliant client-side GraphQL implementation",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "author": "0no.co <hi@0no.co>",
   "source": "./src/index.ts",
   "main": "./dist/graphql.web",
   "module": "./dist/graphql.web.mjs",
   "types": "./dist/graphql.web.d.ts",
+  "files": [
+    "LICENSE",
+    "README.md",
+    "dist/"
+  ],
   "exports": {
     ".": {
       "import": "./dist/graphql.web.mjs",
