--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@0no-co/graphql.web",
   "description": "A spec-compliant client-side GraphQL implementation",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "author": "0no.co <hi@0no.co>",
   "source": "./src/index.ts",
   "main": "./dist/graphql.web",
@@ -29,7 +29,7 @@
     "client-side graphql"
   ],
   "scripts": {
-    "test": "vitest run",
+    "test": "vitest",
     "check": "tsc",
     "lint": "eslint --ext=js,ts .",
     "build": "rollup -c scripts/rollup.config.mjs",
