--- a/benchmark/package.json
+++ b/benchmark/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "benchr": "4.3.0",
-    "graphql": "^16.6.0"
+    "graphql15": "npm:graphql@^15.8.0",
+    "graphql16": "npm:graphql@^16.6.0",
+    "graphql17": "npm:graphql@^17.0.0-alpha.2"
   }
 }
