--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "client-side graphql"
   ],
   "scripts": {
-    "test": "vitest run",
+    "test": "vitest",
     "check": "tsc",
     "lint": "eslint --ext=js,ts .",
     "build": "rollup -c scripts/rollup.config.mjs",
@@ -92,7 +92,7 @@
     "rollup-plugin-dts": "^5.3.0",
     "terser": "^5.16.6",
     "typescript": "^5.0.2",
-    "vitest": "^0.29.3"
+    "vitest": "^0.29.7"
   },
   "publishConfig": {
     "access": "public"
