--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
     "declaration": false,
     "module": "es2015",
     "moduleResolution": "node",
+    "resolveJsonModule": true,
     "target": "esnext",
     "strict": true,
     "noImplicitAny": false,
