Move type-check tests to Vitest

--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "client-side graphql"
   ],
   "scripts": {
-    "test": "vitest",
+    "test": "vitest test",
     "check": "tsc",
     "lint": "eslint --ext=js,ts .",
     "build": "rollup -c scripts/rollup.config.mjs",
