--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   ],
   "scripts": {
     "test": "vitest test",
+    "bench": "vitest bench --typecheck.enabled=false",
     "check": "tsc",
     "lint": "eslint --ext=js,ts .",
     "build": "rollup -c scripts/rollup.config.mjs",
@@ -102,7 +103,10 @@
     "rollup-plugin-dts": "^6.1.0",
     "terser": "^5.27.0",
     "typescript": "^5.3.3",
-    "vitest": "^1.2.2"
+    "vitest": "^1.2.2",
+    "graphql15": "npm:graphql@^15.8.0",
+    "graphql16": "npm:graphql@^16.8.1",
+    "graphql17": "npm:graphql@^17.0.0-alpha.3"
   },
   "publishConfig": {
     "access": "public",
