--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "client-side graphql"
   ],
   "scripts": {
-    "test": "vitest",
+    "test": "vitest test",
+    "bench": "vitest bench --typecheck.enabled=false",
     "check": "tsc",
     "lint": "eslint --ext=js,ts .",
     "build": "rollup -c scripts/rollup.config.mjs",
@@ -55,7 +56,8 @@
   "prettier": {
     "singleQuote": true,
     "tabWidth": 2,
-    "printWidth": 100
+    "printWidth": 100,
+    "trailingComma": "es5"
   },
   "lint-staged": {
     "*.{ts,js}": "eslint -c scripts/eslint-preset.js --fix",
@@ -74,33 +76,36 @@
     ]
   },
   "devDependencies": {
-    "@changesets/cli": "^2.26.2",
-    "@changesets/get-github-info": "^0.5.2",
-    "@rollup/plugin-buble": "^1.0.2",
-    "@rollup/plugin-commonjs": "^24.0.1",
-    "@rollup/plugin-node-resolve": "^15.0.1",
-    "@rollup/plugin-sucrase": "^5.0.1",
-    "@rollup/plugin-terser": "^0.4.0",
-    "@typescript-eslint/eslint-plugin": "^5.55.0",
-    "@typescript-eslint/parser": "^5.55.0",
-    "@vitest/coverage-c8": "^0.29.7",
-    "dotenv": "^16.0.3",
-    "eslint": "^8.36.0",
-    "eslint-config-prettier": "^8.7.0",
-    "eslint-plugin-prettier": "^4.2.1",
+    "@babel/plugin-transform-block-scoping": "^7.23.4",
+    "@babel/plugin-transform-typescript": "^7.23.6",
+    "@changesets/cli": "^2.27.1",
+    "@changesets/get-github-info": "^0.6.0",
+    "@rollup/plugin-babel": "^6.0.4",
+    "@rollup/plugin-commonjs": "^25.0.7",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-terser": "^0.4.4",
+    "@typescript-eslint/eslint-plugin": "^6.20.0",
+    "@typescript-eslint/parser": "^6.20.0",
+    "@vitest/coverage-v8": "^1.2.2",
+    "dotenv": "^16.4.1",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-tsdoc": "^0.2.17",
-    "graphql": "^16.6.0",
     "husky-v4": "^4.3.8",
-    "lint-staged": "^13.2.0",
+    "lint-staged": "^15.2.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.8.4",
-    "rimraf": "^4.4.0",
-    "rollup": "^3.19.1",
-    "rollup-plugin-cjs-check": "^1.0.2",
-    "rollup-plugin-dts": "^5.3.0",
-    "terser": "^5.16.6",
-    "typescript": "^5.0.2",
-    "vitest": "^0.29.7"
+    "prettier": "^3.2.4",
+    "rimraf": "^5.0.5",
+    "rollup": "^4.9.6",
+    "rollup-plugin-cjs-check": "^1.0.3",
+    "rollup-plugin-dts": "^6.1.0",
+    "terser": "^5.27.0",
+    "typescript": "^5.3.3",
+    "vitest": "^1.2.2",
+    "graphql15": "npm:graphql@^15.8.0",
+    "graphql16": "npm:graphql@^16.8.1",
+    "graphql17": "npm:graphql@^17.0.0-alpha.3"
   },
   "publishConfig": {
     "access": "public",
