--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,6 +3,8 @@ on:
   push:
     branches:
       - main
+      - publish-to-jsr
+
 jobs:
   release:
     name: Release
@@ -59,24 +61,24 @@ jobs:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Notify discord
-        id: discord-msg
-        if: steps.changesets.outputs.published == 'true'
-        uses: ./.github/actions/discord-message
-        with:
-          publishedPackages: ${{ steps.changesets.outputs.publishedPackages }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-          DISCORD_WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK_URL }}
+      # - name: Notify discord
+      #   id: discord-msg
+      #   if: steps.changesets.outputs.published == 'true'
+      #   uses: ./.github/actions/discord-message
+      #   with:
+      #     publishedPackages: ${{ steps.changesets.outputs.publishedPackages }}
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #     NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+      #     DISCORD_WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK_URL }}
 
-      - name: Publish Prerelease
-        if: steps.changesets.outputs.published != 'true'
-        env:
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          npm config set "//registry.npmjs.org/:_authToken" "$NPM_TOKEN"
-          git reset --hard origin/main
-          pnpm changeset version --no-git-tag --snapshot canary
-          pnpm changeset publish --no-git-tag --snapshot canary --tag canary
+      # - name: Publish Prerelease
+      #   if: steps.changesets.outputs.published != 'true'
+      #   env:
+      #     NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #   run: |
+      #     npm config set "//registry.npmjs.org/:_authToken" "$NPM_TOKEN"
+      #     git reset --hard origin/main
+      #     pnpm changeset version --no-git-tag --snapshot canary
+      #     pnpm changeset publish --no-git-tag --snapshot canary --tag canary
