--- a/package.json
+++ b/package.json
@@ -76,11 +76,11 @@
     ]
   },
   "devDependencies": {
-    "@actions/core": "^1.10.0",
+    "@actions/core": "^1.11.1",
     "@actions/github": "^5.1.1",
     "@babel/plugin-transform-block-scoping": "^7.23.4",
     "@babel/plugin-transform-typescript": "^7.23.6",
-    "@changesets/cli": "^2.27.1",
+    "@changesets/cli": "^2.29.6",
     "@changesets/get-github-info": "^0.6.0",
     "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-commonjs": "^25.0.7",
@@ -94,6 +94,9 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-tsdoc": "^0.2.17",
+    "graphql15": "npm:graphql@^15.8.0",
+    "graphql16": "npm:graphql@^16.8.1",
+    "graphql17": "npm:graphql@^17.0.0-alpha.3",
     "husky-v4": "^4.3.8",
     "jsr": "^0.12.1",
     "lint-staged": "^15.2.0",
@@ -105,10 +108,7 @@
     "rollup-plugin-dts": "^6.1.0",
     "terser": "^5.27.0",
     "typescript": "^5.3.3",
-    "vitest": "^1.2.2",
-    "graphql15": "npm:graphql@^15.8.0",
-    "graphql16": "npm:graphql@^16.8.1",
-    "graphql17": "npm:graphql@^17.0.0-alpha.3"
+    "vitest": "^1.2.2"
   },
   "publishConfig": {
     "access": "public",
